--- a/app/src/main/res/layout/activity_guide_start.xml
+++ b/app/src/main/res/layout/activity_guide_start.xml
@@ -26,69 +26,14 @@
         android:contentDescription="@string/app_name"
         android:src="@drawable/start_icon"/>
 
-    <LinearLayout
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="12dp"
-        android:layout_gravity="center_horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="1dp"
-            android:text="@string/welcome_to_use_1"
-            android:textColor="@color/major_light"
-            android:textSize="28sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="1dp"
-            android:text="@string/welcome_to_use_2"
-            android:textColor="@color/major_light"
-            android:textSize="28sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="1dp"
-            android:text="@string/welcome_to_use_3"
-            android:textColor="@color/major_light"
-            android:textSize="28sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="1dp"
-            android:text="@string/welcome_to_use_4"
-            android:textColor="@color/major_light"
-            android:textSize="28sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="1dp"
-            android:text="@string/welcome_to_use_5"
-            android:textColor="@color/major_light"
-            android:textSize="28sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="1dp"
-            android:text="@string/welcome_to_use_6"
-            android:textColor="@color/major_light"
-            android:textSize="28sp"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/welcome_to_use_7"
-            android:textColor="@color/major_light"
-            android:textSize="28sp"/>
-
-    </LinearLayout>
+        android:layout_gravity="center_horizontal"
+        android:text="@string/welcome_to_use"
+        android:textColor="@color/major_light"
+        android:textSize="28sp"/>
 
     <TextView
         android:layout_width="match_parent"
