--- a/app/src/main/res/layout/activity_reim_show.xml
+++ b/app/src/main/res/layout/activity_reim_show.xml
@@ -66,6 +66,7 @@
 	                android:layout_marginRight="6dp">
 
                     <TextView
+                        android:id="@+id/symbolTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/rmb_symbol"
