--- a/app/src/main/res/layout/list_report_item_show.xml
+++ b/app/src/main/res/layout/list_report_item_show.xml
@@ -15,21 +15,23 @@
         android:baselineAligned="true">
 
         <TextView
-            android:id="@+id/amountTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textColor="@color/font_major_dark"
-            android:textSize="22sp"/>
-
-        <TextView
+            android:id="@+id/symbolTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="3dp"
             android:text="@string/rmb_symbol"
             android:textColor="@color/font_major_dark"
             android:textSize="14sp"/>
+
+        <TextView
+            android:id="@+id/amountTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@color/font_major_dark"
+            android:textSize="22sp"/>
+
     </LinearLayout>
 
     <RelativeLayout
