--- a/app/src/main/res/layout/activity_reim_edit.xml
+++ b/app/src/main/res/layout/activity_reim_edit.xml
@@ -79,6 +79,7 @@
 	                android:layout_marginRight="8dp">
 
                     <TextView
+                        android:id="@+id/symbolTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/rmb_symbol"
@@ -330,6 +331,39 @@
 
                 <TextView
                     android:id="@+id/timeTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="80dp"
+                    android:paddingRight="16dp"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="18sp"/>
+
+            </RelativeLayout>
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginLeft="80dp"
+                layout="@layout/view_divider"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="56dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_marginTop="19dp"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/currency"
+                    android:textColor="@color/hint_grey"
+                    android:textSize="14sp"/>
+
+                <TextView
+                    android:id="@+id/currencyTextView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_centerVertical="true"
