--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -91,21 +91,23 @@
             android:gravity="bottom">
 
             <TextView
-                android:id="@+id/amountTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="@color/font_major_dark"
-                android:textSize="28sp"/>
-
-            <TextView
+                android:id="@+id/symbolTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="3dp"
                 android:text="@string/rmb_symbol"
                 android:textColor="@color/font_major_dark"
                 android:textSize="16sp"/>
+
+            <TextView
+                android:id="@+id/amountTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textColor="@color/font_major_dark"
+                android:textSize="28sp"/>
+
         </LinearLayout>
 
 	    <TextView
