--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -94,7 +94,7 @@
                 android:id="@+id/symbolTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="3dp"
+                android:layout_marginBottom="1dp"
                 android:text="@string/rmb_symbol"
                 android:textColor="@color/font_major_dark"
                 android:textSize="16sp"/>
@@ -103,6 +103,7 @@
                 android:id="@+id/amountTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="3dp"
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:textColor="@color/font_major_dark"
