--- a/app/src/main/res/layout/list_report_detail.xml
+++ b/app/src/main/res/layout/list_report_detail.xml
@@ -188,22 +188,22 @@
 	        android:layout_marginLeft="14dp">
 	
 	        <TextView
-	            android:id="@+id/amountTextView"
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"
-	            android:layout_marginTop="4dp"
-	            android:ellipsize="end"
-	            android:singleLine="true"
-	            android:textColor="@color/font_reim_number"
-	            android:textSize="24sp"/>
-	
-	        <TextView
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:layout_marginLeft="3dp"
 	            android:text="@string/rmb_symbol"
 	            android:textColor="@color/font_major_dark"
 	            android:textSize="16sp"/>
+
+            <TextView
+                android:id="@+id/amountTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:layout_marginLeft="3dp"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textColor="@color/font_reim_number"
+                android:textSize="24sp"/>
 	
 	    </LinearLayout>
 	
