--- a/app/src/main/res/layout/activity_me_profile.xml
+++ b/app/src/main/res/layout/activity_me_profile.xml
@@ -310,6 +310,38 @@
 
             </LinearLayout>
 
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                layout="@layout/view_divider"/>
+
+            <LinearLayout
+                android:id="@+id/proxyLayout"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/layout_height"
+                android:orientation="horizontal"
+                android:background="@drawable/me_item_drawable">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/set_proxy"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="16sp"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="10dp"
+                    android:contentDescription="@string/next"
+                    android:src="@drawable/next"/>
+
+            </LinearLayout>
+
 		    <include
 				android:layout_width="match_parent"
 				android:layout_height="0.5dp"
@@ -359,19 +391,51 @@
 				android:layout_width="match_parent"
 				android:layout_height="0.5dp"
 		        layout="@layout/view_divider"/>
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginTop="24dp"
+                layout="@layout/view_divider"/>
+
+            <LinearLayout
+                android:id="@+id/switchLayout"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/layout_height"
+                android:orientation="horizontal"
+                android:background="@drawable/me_item_drawable">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="16dp"
+                    android:text="@string/switch_identity"
+                    android:textColor="@color/font_major_dark"
+                    android:textSize="16sp"/>
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="10dp"
+                    android:contentDescription="@string/next"
+                    android:src="@drawable/next"/>
+
+            </LinearLayout>
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                layout="@layout/view_divider"/>
 			
             <RelativeLayout
                 android:id="@+id/passwordLayout"
 				android:layout_width="match_parent"
-				android:layout_height="@dimen/layout_with_two_divider_height"
-                android:layout_marginTop="24dp"
+				android:layout_height="@dimen/layout_with_one_divider_height"
                 android:layout_marginBottom="18dp"
 				android:background="@drawable/me_item_drawable">
-
-                <include
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    layout="@layout/view_divider"/>
 					     
 				<TextView
                     android:id="@+id/passwordTextView"
