--- a/app/src/main/res/layout/activity_me_tag.xml
+++ b/app/src/main/res/layout/activity_me_tag.xml
@@ -41,6 +41,7 @@
             android:text="@string/establish"
             android:textColor="@color/major_light"
             android:textSize="16sp"/>
+
     </RelativeLayout>
 
     <ListView
@@ -48,8 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/titleLayout"
-        android:listSelector="@drawable/list_item_drawable">
-    </ListView>
+        android:listSelector="@drawable/list_item_drawable"/>
 
     <TextView
         android:id="@+id/tagTextView"
