--- a/app/src/main/res/layout/activity_report_comment.xml
+++ b/app/src/main/res/layout/activity_report_comment.xml
@@ -42,8 +42,7 @@
 	    <ListView
 	        android:id="@+id/commentListView"
 	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content">
-	    </ListView>
+	        android:layout_height="wrap_content"/>
 	
 	    <TextView
 	        android:id="@+id/commentTextView"
