--- a/app/src/main/res/layout/activity_report_edit.xml
+++ b/app/src/main/res/layout/activity_report_edit.xml
@@ -212,6 +212,7 @@
 			    android:background="@color/major_light">
 			
 			    <TextView
+                    android:id="@+id/totalTextView"
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 			        android:layout_marginTop="22dp"
