finish wingman and fix bugs

--- a/app/src/main/res/layout/activity_me_profile.xml
+++ b/app/src/main/res/layout/activity_me_profile.xml
@@ -406,6 +406,7 @@
                 android:background="@drawable/me_item_drawable">
 
                 <TextView
+                    android:id="@+id/switchTextView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
