--- a/app/src/main/res/layout/list_category_stat.xml
+++ b/app/src/main/res/layout/list_category_stat.xml
@@ -81,7 +81,8 @@
 	    
     </LinearLayout>
                 
-	<include                 
+	<include
+        android:id="@+id/divider"
 		android:layout_width="match_parent"
 		android:layout_height="0.5dp"
 	 	layout="@layout/view_divider"/>
