--- a/app/src/main/res/layout/list_currency_stat.xml
+++ b/app/src/main/res/layout/list_currency_stat.xml
@@ -38,7 +38,8 @@
 	    
     </LinearLayout>
                 
-	<include                 
+	<include
+        android:id="@+id/divider"
 		android:layout_width="match_parent"
 		android:layout_height="0.5dp"
         android:layout_alignParentBottom="true"
