--- a/app/src/main/res/layout/view_stat_mine.xml
+++ b/app/src/main/res/layout/view_stat_mine.xml
@@ -273,6 +273,12 @@
         android:orientation="horizontal"
         android:background="@color/list_item_header">
 
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_alignParentBottom="true"
+            layout="@layout/view_divider"/>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -302,6 +308,12 @@
         android:layout_height="25dp"
         android:orientation="horizontal"
         android:background="@color/list_item_header">
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_alignParentBottom="true"
+            layout="@layout/view_divider"/>
 
         <TextView
             android:layout_width="wrap_content"
