--- a/app/src/main/res/layout/view_stat_others.xml
+++ b/app/src/main/res/layout/view_stat_others.xml
@@ -125,6 +125,41 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/currencyTitleLayout"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:orientation="horizontal"
+        android:background="@color/list_item_header">
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            layout="@layout/view_divider"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:text="@string/stat_by_currency"
+            android:textColor="@color/font_list_item_header"
+            android:textSize="14sp"/>
+
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_alignParentBottom="true"
+            layout="@layout/view_divider"/>
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/currencyLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"/>
+
+    <RelativeLayout
         android:id="@+id/tagTitleLayout"
         android:layout_width="match_parent"
         android:layout_height="25dp"
@@ -164,23 +199,16 @@
         android:layout_height="0.5dp"
         layout="@layout/view_divider"/>
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="25dp"
+        android:layout_height="24dp"
+        android:layout_centerVertical="true"
+        android:paddingLeft="16dp"
         android:background="@color/list_item_header"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:layout_gravity="center_vertical"
-            android:layout_marginLeft="16dp"
-            android:gravity="center_vertical"
-            android:text="@string/stat_by_member"
-            android:textColor="@color/font_list_item_header"
-            android:textSize="14sp"/>
-
-    </LinearLayout>
+        android:gravity="center_vertical"
+        android:text="@string/stat_by_member"
+        android:textColor="@color/font_list_item_header"
+        android:textSize="14sp"/>
 
     <include
         android:layout_width="match_parent"
