--- a/app/src/main/res/layout/list_didi_expense.xml
+++ b/app/src/main/res/layout/list_didi_expense.xml
@@ -9,13 +9,28 @@
     android:paddingLeft="16dp"
     android:paddingRight="10dp">
 
-	<TextView
-	    android:id="@+id/timeTextView"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-        android:textColor="@color/hint_light_grey"
-        android:textSize="14sp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
+        <TextView
+            android:id="@+id/timeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/hint_light_grey"
+            android:textSize="14sp"/>
+
+        <TextView
+            android:id="@+id/usedTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dp"
+            android:text="@string/has_imported"
+            android:textColor="@color/major_dark"
+            android:textSize="14sp"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
