--- a/app/src/main/res/layout/window_reim_time.xml
+++ b/app/src/main/res/layout/window_reim_time.xml
@@ -37,7 +37,7 @@
 
 	<LinearLayout
 	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
+	    android:layout_height="match_parent"
 	    android:orientation="horizontal"
 	    android:layout_gravity="center_horizontal">
 
