--- a/app/src/main/res/layout/list_tag_stat.xml
+++ b/app/src/main/res/layout/list_tag_stat.xml
@@ -6,7 +6,7 @@
     android:paddingTop="12dp"
     android:paddingBottom="12dp">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -14,9 +14,9 @@
 
         <TextView
             android:id="@+id/nameTextView"
-            android:layout_width="60dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
+            android:layout_weight="1"
             android:layout_marginRight="6dp"
             android:textColor="@color/font_major_dark"
             android:textSize="14sp"/>
@@ -25,11 +25,10 @@
             android:id="@+id/countTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:textColor="@color/hint_light_grey"
             android:textSize="14sp"/>
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
