--- a/app/src/main/res/layout/activity_report_show.xml
+++ b/app/src/main/res/layout/activity_report_show.xml
@@ -64,7 +64,7 @@
         android:background="@color/background"/>
 
     <include
-        android:id="@+id/revokeDivider"
+        android:id="@+id/buttonDivider"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         layout="@layout/view_divider"/>
@@ -76,6 +76,16 @@
         style="?android:attr/buttonBarButtonStyle"
         android:background="@drawable/bar_button_drawable"
         android:text="@string/revoke"
+        android:textColor="@color/start_button_text_color"
+        android:textSize="18sp"/>
+
+    <Button
+        android:id="@+id/confirmButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="?android:attr/buttonBarButtonStyle"
+        android:background="@drawable/bar_button_drawable"
+        android:text="@string/confirm_paid"
         android:textColor="@color/start_button_text_color"
         android:textSize="18sp"/>
 
