--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -284,7 +284,7 @@
                 android:paddingLeft="16dp"
                 android:gravity="center_vertical"
                 android:background="@drawable/me_item_drawable"
-                android:text="@string/get_invoice"
+                android:text="@string/invoice_title"
                 android:textColor="@color/font_major_dark"
                 android:textSize="16sp"/>
 
