--- a/app/src/main/res/layout/activity_me_pick_proxy.xml
+++ b/app/src/main/res/layout/activity_me_pick_proxy.xml
@@ -52,47 +52,42 @@
         android:textColor="@color/hint_light_grey"
         android:textSize="16sp"
         android:visibility="gone"/>
-    
-    <LinearLayout
+
+    <RelativeLayout
         android:id="@+id/searchContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="48.5dp"
+        android:orientation="horizontal">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/searchImageView"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="16dp"
+            android:contentDescription="@string/search"
+            android:src="@drawable/search"/>
+
+        <classes.widget.ClearEditText
+            android:id="@+id/proxyEditText"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/edittext_height"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="16dp"
-                android:contentDescription="@string/search"
-                android:src="@drawable/search"/>
-
-            <classes.widget.ClearEditText
-                android:id="@+id/proxyEditText"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="16dp"
-                android:paddingRight="16dp"
-                android:background="@null"
-                android:hint="@string/input_proxy"
-                android:textColor="@color/font_major_dark"
-                android:textSize="16sp"
-                android:textCursorDrawable="@null"/>
-
-        </LinearLayout>
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@+id/searchImageView"
+            android:layout_marginLeft="16dp"
+            android:paddingRight="16dp"
+            android:background="@null"
+            android:hint="@string/input_proxy"
+            android:textColor="@color/font_major_dark"
+            android:textSize="16sp"
+            android:textCursorDrawable="@null"/>
 
         <include
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
+            android:layout_alignParentBottom="true"
             layout="@layout/view_divider"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
