--- a/app/src/main/res/layout/activity_me_settings.xml
+++ b/app/src/main/res/layout/activity_me_settings.xml
@@ -65,10 +65,10 @@
 
     <!--</RelativeLayout>-->
 
-    <include
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        layout="@layout/view_divider"/>
+    <!--<include-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0.5dp"-->
+        <!--layout="@layout/view_divider"/>-->
 
     <TextView
         android:id="@+id/updateTextView"
