--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -293,17 +293,18 @@
 				android:layout_height="0.5dp"
 	        	layout="@layout/view_divider"/>
 
+            <include
+                android:id="@+id/adminDivider"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_marginTop="24dp"
+                layout="@layout/view_divider"/>
+
             <RelativeLayout
                 android:id="@+id/categoryLayout"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/layout_with_two_divider_height"
-                android:layout_marginTop="24dp"
                 android:background="@drawable/me_item_drawable">
-
-                <include
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    layout="@layout/view_divider"/>
 
                 <TextView
                     android:layout_width="wrap_content"
