--- a/app/src/main/res/layout/window_reim_time.xml
+++ b/app/src/main/res/layout/window_reim_time.xml
@@ -45,13 +45,15 @@
 	        android:id="@+id/datePicker"
 	        android:layout_width="wrap_content"
 	        android:layout_height="match_parent"
-	        android:calendarViewShown="false"/>
+	        android:calendarViewShown="false"
+            android:datePickerMode="spinner"/>
 
 	    <TimePicker
 	        android:id="@+id/timePicker"
 	        android:layout_width="wrap_content"
 	        android:layout_height="match_parent"
-	        android:layout_marginLeft="15dp"/>
+	        android:layout_marginLeft="15dp"
+            android:timePickerMode="spinner"/>
 	    
 	</LinearLayout>
 
