--- a/app/src/main/res/layout/list_category.xml
+++ b/app/src/main/res/layout/list_category.xml
@@ -1,28 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="56dp"
+    android:orientation="horizontal"
     android:background="@drawable/list_item_drawable">
 
     <ImageView
         android:id="@+id/iconImageView"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
+        android:layout_gravity="center_vertical"
         android:layout_marginLeft="20dp"
         android:contentDescription="@string/icon"
         android:src="@drawable/default_icon"/>
 
-    <TextView
-        android:id="@+id/nameTextView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_toRightOf="@+id/iconImageView"
-        android:layout_marginLeft="18dp"
-        android:layout_marginRight="18dp"
-        android:textColor="@color/font_major_dark"
-        android:textSize="16sp"/>
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp">
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/nameTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@color/font_major_dark"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/noteTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@color/hint_grey"
+            android:textSize="14sp"/>
+
+    </LinearLayout>
+
+</LinearLayout>
