--- a/app/src/main/res/layout/list_member.xml
+++ b/app/src/main/res/layout/list_member.xml
@@ -1,29 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:reim="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="66dp"
+    android:orientation="horizontal"
     android:background="@drawable/list_item_drawable">
 
     <classes.widget.CircleImageView
         android:id="@+id/avatarImageView"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
+        android:layout_gravity="center_vertical"
         android:layout_marginLeft="16dp"
         android:contentDescription="@string/avatar"
         android:src="@drawable/default_avatar"
         reim:border_width="0dp"/>
 
-    <TextView
-        android:id="@+id/nicknameTextView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@+id/avatarImageView"
-        android:textColor="@color/font_major_dark"
-        android:textSize="16sp"/>
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp">
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/nicknameTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@color/font_major_dark"
+            android:textSize="16sp"/>
+
+        <TextView
+            android:id="@+id/departmentTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@color/hint_grey"
+            android:textSize="14sp"/>
+
+    </LinearLayout>
+
+</LinearLayout>
