--- a/app/src/main/res/layout/activity_me_pick_proxy.xml
+++ b/app/src/main/res/layout/activity_me_pick_proxy.xml
@@ -93,11 +93,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <classes.widget.PinnedSectionListView
-            android:id="@+id/proxyListView"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/refreshLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:listSelector="@drawable/list_item_drawable"/>
+            android:layout_height="match_parent">
+
+            <classes.widget.PinnedSectionListView
+                android:id="@+id/proxyListView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:listSelector="@drawable/list_item_drawable"/>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
         <TextView
             android:id="@+id/centralTextView"
