change ui of item in report

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -53,13 +53,13 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true">
+            android:layout_alignParentRight="true"
+            android:gravity="center_vertical">
 
             <TextView
                 android:id="@+id/reportTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
                 android:ellipsize="end"
                 android:singleLine="true"
                 android:textColor="@color/hint_light_grey"
@@ -70,7 +70,6 @@
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:layout_marginLeft="6dp"
-                android:layout_gravity="center_vertical"
                 android:contentDescription="@string/tag"
                 android:src="@drawable/default_icon"/>
 
