change ui of item in report

--- a/app/src/main/res/layout/list_report_item_show.xml
+++ b/app/src/main/res/layout/list_report_item_show.xml
@@ -57,6 +57,7 @@
         android:orientation="horizontal"
         android:gravity="bottom"
         android:baselineAligned="true"
+        android:layout_marginTop="3dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp">
 
