--- a/app/src/main/res/layout/list_uber_expense.xml
+++ b/app/src/main/res/layout/list_uber_expense.xml
@@ -35,38 +35,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="3dp">
+        android:orientation="horizontal">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/startTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:layout_marginRight="10dp">
-
-            <TextView
-                android:id="@+id/startTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="@color/font_major_dark"
-                android:textSize="16sp"/>
-
-            <TextView
-                android:id="@+id/destinationTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginTop="3dp"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:textColor="@color/font_major_dark"
-                android:textSize="16sp"/>
-
-        </LinearLayout>
+            android:layout_marginRight="10dp"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@color/font_major_dark"
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/priceTextView"
