--- a/app/src/main/res/layout/activity_report_pick_item.xml
+++ b/app/src/main/res/layout/activity_report_pick_item.xml
@@ -97,7 +97,7 @@
     <ListView
         android:id="@+id/itemListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/titleLayout"
         android:divider="@null"
         android:cacheColorHint="@android:color/transparent"
